y.output
State 154 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Program_head block

    2 Program_head: DATATYPE MAINP PARENTSTART PARENTEND
    3             | error

    4 block: Block_init Local_var_declaration Subprogs_declaration Sentences Block_end

    5 Block_init: SQBRASTART

    6 Local_var_declaration: init_mark_var_declaration local_variables end_mark_var_declaration
    7                      | /* empty */

    8 Subprogs_declaration: Subprogs_declaration Subprog_declaration
    9                     | /* empty */

   10 Sentences: Sentences Sentence
   11          | /* empty */

   12 Block_end: SQBRAEND
   13          | error

   14 init_mark_var_declaration: DECLARE SQBRASTART

   15 local_variables: local_variables Var_body_declaration
   16                | Var_body_declaration

   17 end_mark_var_declaration: SQBRAEND

   18 Subprog_declaration: Subprog_head block

   19 Sentence: block
   20         | assignment_sentence
   21         | if_sentence
   22         | while_sentence
   23         | switch_sentence
   24         | input_sentence
   25         | output_sentence
   26         | return_sentence
   27         | list_operations

   28 Var_body_declaration: types list_of_ident SEMICOLON
   29                     | error

   30 Subprog_head: types IDENT PARENTSTART arg_func PARENTEND

   31 arg_func: arg_func COLON types IDENT
   32         | types IDENT
   33         | error
   34         | /* empty */

   35 assignment_sentence: IDENT ASSIGNATION expression SEMICOLON

   36 if_sentence: CONDITIONIF PARENTSTART expression PARENTEND Sentence
   37            | CONDITIONIF PARENTSTART expression PARENTEND Sentence CONDITIONELSE Sentence

   38 while_sentence: LOOP PARENTSTART expression PARENTEND Sentence

   39 switch_sentence: OPTION PARENTSTART IDENT PARENTEND SQBRASTART cases SQBRAEND

   40 input_sentence: INPUT PARENTSTART expression COLON list_of_ident PARENTEND SEMICOLON

   41 output_sentence: OUTPUT PARENTSTART expression PARENTEND SEMICOLON

   42 return_sentence: RETURN expression SEMICOLON

   43 list_operations: IDENT LISTLEFTRIGHT SEMICOLON
   44                | DOLLAR IDENT SEMICOLON

   45 expression: UNARYOPER expression
   46           | INCREMENT expression
   47           | DECREMENT expression
   48           | ADDSUB expression
   49           | expression ADDSUB expression
   50           | expression OR expression
   51           | expression AND expression
   52           | expression EQUALITYOPER expression
   53           | expression RELATIONOPER expression
   54           | expression DECREMENT expression
   55           | expression INCREMENT expression ATT expression
   56           | expression AT expression
   57           | expression MULTOPER expression
   58           | PARENTSTART expression PARENTEND
   59           | IDENT
   60           | constants
   61           | function
   62           | error

   63 cases: CASE const TWOPOINTS Sentences ENDCASE SEMICOLON cases
   64      | CASE const TWOPOINTS Sentences SEMICOLON cases
   65      | DEFAULTCASE TWOPOINTS Sentences ENDCASE SEMICOLON cases
   66      | DEFAULTCASE TWOPOINTS Sentences SEMICOLON cases
   67      | /* empty */

   68 const: INTVALUE
   69      | CHARVALUE

   70 function: IDENT PARENTSTART expression_list PARENTEND
   71         | IDENT PARENTSTART PARENTEND

   72 expression_list: expression_list COLON expression
   73                | expression

   74 types: DATATYPE
   75      | LISTNAME DATATYPE

   76 list_of_ident: list_of_ident COLON IDENT
   77              | IDENT

   78 constants: INTVALUE
   79          | DOUBLEVALUE
   80          | LOGICVALUE
   81          | CHARVALUE
   82          | STRINGVALUE
   83          | c_lists

   84 c_lists: c_int_list
   85        | c_double_list
   86        | c_boolean_list
   87        | c_character_list

   88 c_int_list: SQBRASTART int_list SQBRAEND

   89 c_double_list: SQBRASTART double_list SQBRAEND

   90 c_boolean_list: SQBRASTART boolean_list SQBRAEND

   91 c_character_list: SQBRASTART character_list SQBRAEND

   92 int_list: int_list COLON INTVALUE
   93         | INTVALUE

   94 double_list: double_list COLON DOUBLEVALUE
   95            | DOUBLEVALUE

   96 boolean_list: boolean_list COLON LOGICVALUE
   97             | LOGICVALUE

   98 character_list: character_list COLON CHARVALUE
   99               | CHARVALUE


Terminals, with rules where they appear

$end (0) 0
error (256) 3 13 29 33 62
AT (258) 56
OR (259) 50
AND (260) 51
EQUALITYOPER (261) 52
RELATIONOPER (262) 53
ADDSUB (263) 48 49
MULTOPER (264) 57
UNARYOPER (265) 45
DECREMENT (266) 47 54
INCREMENT (267) 46 55
ATT (268) 55
LISTLEFTRIGHT (269) 43
DOLLAR (270) 44
IDENT (271) 30 31 32 35 39 43 44 59 70 71 76 77
DATATYPE (272) 2 74 75
LISTNAME (273) 75
LOGICVALUE (274) 80 96 97
INTVALUE (275) 68 78 92 93
DOUBLEVALUE (276) 79 94 95
CHARVALUE (277) 69 81 98 99
STRINGVALUE (278) 82
CONDITIONIF (279) 36 37
CONDITIONELSE (280) 37
LOOP (281) 38
OPTION (282) 39
CASE (283) 63 64
PARENTSTART (284) 2 30 36 37 38 39 40 41 58 70 71
PARENTEND (285) 2 30 36 37 38 39 40 41 58 70 71
SQBRASTART (286) 5 14 39 88 89 90 91
SQBRAEND (287) 12 17 39 88 89 90 91
INPUT (288) 40
OUTPUT (289) 41
ENDCASE (290) 63 65
DEFAULTCASE (291) 65 66
SEMICOLON (292) 28 35 40 41 42 43 44 63 64 65 66
COLON (293) 31 40 72 76 92 94 96 98
ASSIGNATION (294) 35
DECLARE (295) 14
MAINP (296) 2
TWOPOINTS (297) 63 64 65 66
RETURN (298) 42


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Program (45)
    on left: 1, on right: 0
Program_head (46)
    on left: 2 3, on right: 1
block (47)
    on left: 4, on right: 1 18 19
Block_init (48)
    on left: 5, on right: 4
Local_var_declaration (49)
    on left: 6 7, on right: 4
Subprogs_declaration (50)
    on left: 8 9, on right: 4 8
Sentences (51)
    on left: 10 11, on right: 4 10 63 64 65 66
Block_end (52)
    on left: 12 13, on right: 4
init_mark_var_declaration (53)
    on left: 14, on right: 6
local_variables (54)
    on left: 15 16, on right: 6 15
end_mark_var_declaration (55)
    on left: 17, on right: 6
Subprog_declaration (56)
    on left: 18, on right: 8
Sentence (57)
    on left: 19 20 21 22 23 24 25 26 27, on right: 10 36 37 38
Var_body_declaration (58)
    on left: 28 29, on right: 15 16
Subprog_head (59)
    on left: 30, on right: 18
arg_func (60)
    on left: 31 32 33 34, on right: 30 31
assignment_sentence (61)
    on left: 35, on right: 20
if_sentence (62)
    on left: 36 37, on right: 21
while_sentence (63)
    on left: 38, on right: 22
switch_sentence (64)
    on left: 39, on right: 23
input_sentence (65)
    on left: 40, on right: 24
output_sentence (66)
    on left: 41, on right: 25
return_sentence (67)
    on left: 42, on right: 26
list_operations (68)
    on left: 43 44, on right: 27
expression (69)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
   , on right: 35 36 37 38 40 41 42 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 72 73
cases (70)
    on left: 63 64 65 66 67, on right: 39 63 64 65 66
const (71)
    on left: 68 69, on right: 63 64
function (72)
    on left: 70 71, on right: 61
expression_list (73)
    on left: 72 73, on right: 70 72
types (74)
    on left: 74 75, on right: 28 30 31 32
list_of_ident (75)
    on left: 76 77, on right: 28 40 76
constants (76)
    on left: 78 79 80 81 82 83, on right: 60
c_lists (77)
    on left: 84 85 86 87, on right: 83
c_int_list (78)
    on left: 88, on right: 84
c_double_list (79)
    on left: 89, on right: 85
c_boolean_list (80)
    on left: 90, on right: 86
c_character_list (81)
    on left: 91, on right: 87
int_list (82)
    on left: 92 93, on right: 88 92
double_list (83)
    on left: 94 95, on right: 89 94
boolean_list (84)
    on left: 96 97, on right: 90 96
character_list (85)
    on left: 98 99, on right: 91 98


state 0

    0 $accept: . Program $end

    error     shift, and go to state 1
    DATATYPE  shift, and go to state 2

    Program       go to state 3
    Program_head  go to state 4


state 1

    3 Program_head: error .

    $default  reduce using rule 3 (Program_head)


state 2

    2 Program_head: DATATYPE . MAINP PARENTSTART PARENTEND

    MAINP  shift, and go to state 5


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 6


state 4

    1 Program: Program_head . block

    SQBRASTART  shift, and go to state 7

    block       go to state 8
    Block_init  go to state 9


state 5

    2 Program_head: DATATYPE MAINP . PARENTSTART PARENTEND

    PARENTSTART  shift, and go to state 10


state 6

    0 $accept: Program $end .

    $default  accept


state 7

    5 Block_init: SQBRASTART .

    $default  reduce using rule 5 (Block_init)


state 8

    1 Program: Program_head block .

    $default  reduce using rule 1 (Program)


state 9

    4 block: Block_init . Local_var_declaration Subprogs_declaration Sentences Block_end

    DECLARE  shift, and go to state 11

    $default  reduce using rule 7 (Local_var_declaration)

    Local_var_declaration      go to state 12
    init_mark_var_declaration  go to state 13


state 10

    2 Program_head: DATATYPE MAINP PARENTSTART . PARENTEND

    PARENTEND  shift, and go to state 14


state 11

   14 init_mark_var_declaration: DECLARE . SQBRASTART

    SQBRASTART  shift, and go to state 15


state 12

    4 block: Block_init Local_var_declaration . Subprogs_declaration Sentences Block_end

    $default  reduce using rule 9 (Subprogs_declaration)

    Subprogs_declaration  go to state 16


state 13

    6 Local_var_declaration: init_mark_var_declaration . local_variables end_mark_var_declaration

    error     shift, and go to state 17
    DATATYPE  shift, and go to state 18
    LISTNAME  shift, and go to state 19

    local_variables       go to state 20
    Var_body_declaration  go to state 21
    types                 go to state 22


state 14

    2 Program_head: DATATYPE MAINP PARENTSTART PARENTEND .

    $default  reduce using rule 2 (Program_head)


state 15

   14 init_mark_var_declaration: DECLARE SQBRASTART .

    $default  reduce using rule 14 (init_mark_var_declaration)


state 16

    4 block: Block_init Local_var_declaration Subprogs_declaration . Sentences Block_end
    8 Subprogs_declaration: Subprogs_declaration . Subprog_declaration

    DATATYPE  shift, and go to state 18
    LISTNAME  shift, and go to state 19

    $default  reduce using rule 11 (Sentences)

    Sentences            go to state 23
    Subprog_declaration  go to state 24
    Subprog_head         go to state 25
    types                go to state 26


state 17

   29 Var_body_declaration: error .

    $default  reduce using rule 29 (Var_body_declaration)


state 18

   74 types: DATATYPE .

    $default  reduce using rule 74 (types)


state 19

   75 types: LISTNAME . DATATYPE

    DATATYPE  shift, and go to state 27


state 20

    6 Local_var_declaration: init_mark_var_declaration local_variables . end_mark_var_declaration
   15 local_variables: local_variables . Var_body_declaration

    error     shift, and go to state 17
    DATATYPE  shift, and go to state 18
    LISTNAME  shift, and go to state 19
    SQBRAEND  shift, and go to state 28

    end_mark_var_declaration  go to state 29
    Var_body_declaration      go to state 30
    types                     go to state 22


state 21

   16 local_variables: Var_body_declaration .

    $default  reduce using rule 16 (local_variables)


state 22

   28 Var_body_declaration: types . list_of_ident SEMICOLON

    IDENT  shift, and go to state 31

    list_of_ident  go to state 32


state 23

    4 block: Block_init Local_var_declaration Subprogs_declaration Sentences . Block_end
   10 Sentences: Sentences . Sentence

    error        shift, and go to state 33
    DOLLAR       shift, and go to state 34
    IDENT        shift, and go to state 35
    CONDITIONIF  shift, and go to state 36
    LOOP         shift, and go to state 37
    OPTION       shift, and go to state 38
    SQBRASTART   shift, and go to state 7
    SQBRAEND     shift, and go to state 39
    INPUT        shift, and go to state 40
    OUTPUT       shift, and go to state 41
    RETURN       shift, and go to state 42

    block                go to state 43
    Block_init           go to state 9
    Block_end            go to state 44
    Sentence             go to state 45
    assignment_sentence  go to state 46
    if_sentence          go to state 47
    while_sentence       go to state 48
    switch_sentence      go to state 49
    input_sentence       go to state 50
    output_sentence      go to state 51
    return_sentence      go to state 52
    list_operations      go to state 53


state 24

    8 Subprogs_declaration: Subprogs_declaration Subprog_declaration .

    $default  reduce using rule 8 (Subprogs_declaration)


state 25

   18 Subprog_declaration: Subprog_head . block

    SQBRASTART  shift, and go to state 7

    block       go to state 54
    Block_init  go to state 9


state 26

   30 Subprog_head: types . IDENT PARENTSTART arg_func PARENTEND

    IDENT  shift, and go to state 55


state 27

   75 types: LISTNAME DATATYPE .

    $default  reduce using rule 75 (types)


state 28

   17 end_mark_var_declaration: SQBRAEND .

    $default  reduce using rule 17 (end_mark_var_declaration)


state 29

    6 Local_var_declaration: init_mark_var_declaration local_variables end_mark_var_declaration .

    $default  reduce using rule 6 (Local_var_declaration)


state 30

   15 local_variables: local_variables Var_body_declaration .

    $default  reduce using rule 15 (local_variables)


state 31

   77 list_of_ident: IDENT .

    $default  reduce using rule 77 (list_of_ident)


state 32

   28 Var_body_declaration: types list_of_ident . SEMICOLON
   76 list_of_ident: list_of_ident . COLON IDENT

    SEMICOLON  shift, and go to state 56
    COLON      shift, and go to state 57


state 33

   13 Block_end: error .

    $default  reduce using rule 13 (Block_end)


state 34

   44 list_operations: DOLLAR . IDENT SEMICOLON

    IDENT  shift, and go to state 58


state 35

   35 assignment_sentence: IDENT . ASSIGNATION expression SEMICOLON
   43 list_operations: IDENT . LISTLEFTRIGHT SEMICOLON

    LISTLEFTRIGHT  shift, and go to state 59
    ASSIGNATION    shift, and go to state 60


state 36

   36 if_sentence: CONDITIONIF . PARENTSTART expression PARENTEND Sentence
   37            | CONDITIONIF . PARENTSTART expression PARENTEND Sentence CONDITIONELSE Sentence

    PARENTSTART  shift, and go to state 61


state 37

   38 while_sentence: LOOP . PARENTSTART expression PARENTEND Sentence

    PARENTSTART  shift, and go to state 62


state 38

   39 switch_sentence: OPTION . PARENTSTART IDENT PARENTEND SQBRASTART cases SQBRAEND

    PARENTSTART  shift, and go to state 63


state 39

   12 Block_end: SQBRAEND .

    $default  reduce using rule 12 (Block_end)


state 40

   40 input_sentence: INPUT . PARENTSTART expression COLON list_of_ident PARENTEND SEMICOLON

    PARENTSTART  shift, and go to state 64


state 41

   41 output_sentence: OUTPUT . PARENTSTART expression PARENTEND SEMICOLON

    PARENTSTART  shift, and go to state 65


state 42

   42 return_sentence: RETURN . expression SEMICOLON

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 79
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 43

   19 Sentence: block .

    $default  reduce using rule 19 (Sentence)


state 44

    4 block: Block_init Local_var_declaration Subprogs_declaration Sentences Block_end .

    $default  reduce using rule 4 (block)


state 45

   10 Sentences: Sentences Sentence .

    $default  reduce using rule 10 (Sentences)


state 46

   20 Sentence: assignment_sentence .

    $default  reduce using rule 20 (Sentence)


state 47

   21 Sentence: if_sentence .

    $default  reduce using rule 21 (Sentence)


state 48

   22 Sentence: while_sentence .

    $default  reduce using rule 22 (Sentence)


state 49

   23 Sentence: switch_sentence .

    $default  reduce using rule 23 (Sentence)


state 50

   24 Sentence: input_sentence .

    $default  reduce using rule 24 (Sentence)


state 51

   25 Sentence: output_sentence .

    $default  reduce using rule 25 (Sentence)


state 52

   26 Sentence: return_sentence .

    $default  reduce using rule 26 (Sentence)


state 53

   27 Sentence: list_operations .

    $default  reduce using rule 27 (Sentence)


state 54

   18 Subprog_declaration: Subprog_head block .

    $default  reduce using rule 18 (Subprog_declaration)


state 55

   30 Subprog_head: types IDENT . PARENTSTART arg_func PARENTEND

    PARENTSTART  shift, and go to state 87


state 56

   28 Var_body_declaration: types list_of_ident SEMICOLON .

    $default  reduce using rule 28 (Var_body_declaration)


state 57

   76 list_of_ident: list_of_ident COLON . IDENT

    IDENT  shift, and go to state 88


state 58

   44 list_operations: DOLLAR IDENT . SEMICOLON

    SEMICOLON  shift, and go to state 89


state 59

   43 list_operations: IDENT LISTLEFTRIGHT . SEMICOLON

    SEMICOLON  shift, and go to state 90


state 60

   35 assignment_sentence: IDENT ASSIGNATION . expression SEMICOLON

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 91
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 61

   36 if_sentence: CONDITIONIF PARENTSTART . expression PARENTEND Sentence
   37            | CONDITIONIF PARENTSTART . expression PARENTEND Sentence CONDITIONELSE Sentence

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 92
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 62

   38 while_sentence: LOOP PARENTSTART . expression PARENTEND Sentence

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 93
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 63

   39 switch_sentence: OPTION PARENTSTART . IDENT PARENTEND SQBRASTART cases SQBRAEND

    IDENT  shift, and go to state 94


state 64

   40 input_sentence: INPUT PARENTSTART . expression COLON list_of_ident PARENTEND SEMICOLON

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 95
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 65

   41 output_sentence: OUTPUT PARENTSTART . expression PARENTEND SEMICOLON

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 96
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 66

   62 expression: error .

    $default  reduce using rule 62 (expression)


state 67

   48 expression: ADDSUB . expression

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 97
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 68

   45 expression: UNARYOPER . expression

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 98
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 69

   47 expression: DECREMENT . expression

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 99
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 70

   46 expression: INCREMENT . expression

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 100
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 71

   59 expression: IDENT .
   70 function: IDENT . PARENTSTART expression_list PARENTEND
   71         | IDENT . PARENTSTART PARENTEND

    PARENTSTART  shift, and go to state 101

    $default  reduce using rule 59 (expression)


state 72

   80 constants: LOGICVALUE .

    $default  reduce using rule 80 (constants)


state 73

   78 constants: INTVALUE .

    $default  reduce using rule 78 (constants)


state 74

   79 constants: DOUBLEVALUE .

    $default  reduce using rule 79 (constants)


state 75

   81 constants: CHARVALUE .

    $default  reduce using rule 81 (constants)


state 76

   82 constants: STRINGVALUE .

    $default  reduce using rule 82 (constants)


state 77

   58 expression: PARENTSTART . expression PARENTEND

    error        shift, and go to state 66
    ADDSUB       shift, and go to state 67
    UNARYOPER    shift, and go to state 68
    DECREMENT    shift, and go to state 69
    INCREMENT    shift, and go to state 70
    IDENT        shift, and go to state 71
    LOGICVALUE   shift, and go to state 72
    INTVALUE     shift, and go to state 73
    DOUBLEVALUE  shift, and go to state 74
    CHARVALUE    shift, and go to state 75
    STRINGVALUE  shift, and go to state 76
    PARENTSTART  shift, and go to state 77
    SQBRASTART   shift, and go to state 78

    expression        go to state 102
    function          go to state 80
    constants         go to state 81
    c_lists           go to state 82
    c_int_list        go to state 83
    c_double_list     go to state 84
    c_boolean_list    go to state 85
    c_character_list  go to state 86


state 78

   88 c_int_list: SQBRASTART . int_list SQBRAEND
   89 c_double_list: SQBRASTART . double_list SQBRAEND
   90 c_boolean_list: SQBRASTART . boolean_list SQBRAEND
   91 c_character_list: SQBRASTART . character_list SQBRAEND

    LOGICVALUE   shift, and go to state 103
    INTVALUE     shift, and go to state 104
    DOUBLEVALUE  shift, and go to state 105
    CHARVALUE    shift, and go to state 106

    int_list        go to state 107
    double_list     go to state 108
    boolean_list    go to state 109
    character_list  go to state 110


state 79

   42 return_sentence: RETURN expression . SEMICOLON
   49 expression: expression . ADDSUB expression
   50           | expression . OR expression
   51           | expression . AND expression
   52           | expression . EQUALITYOPER expression
   53           | expression . RELATIONOPER expression
   54           | expression . DECREMENT expression
   55           | expression . INCREMENT expression ATT expression
   56           | expression . AT expression
   57           | expression . MULTOPER expression
